Updated MU Characters page with Spider-Man 2099 (Original Suit)

--- a/marvel-united/index.html
+++ b/marvel-united/index.html
@@ -316,7 +316,7 @@
 <li>Spider-Ham</li>
 <li>Spider-Man</li>
 <li>Spider-Man 2099</li>
-<li>Spider-Man 2099</li>
+<li>Spider-Man 2099 (Original Suit)</li>
 <li>Spider-Woman</li>
 <li>Spiral</li>
 <li>Squirrel Girl</li>
