Updated MU Characters page with Silver Surfer (Herald) and Scarlet Witch & Quicksilver

--- a/marvel-united/index.html
+++ b/marvel-united/index.html
@@ -290,7 +290,7 @@
 <li>Sasquatch</li>
 <li>Sauron</li>
 <li>Scarlet Witch</li>
-<li>Scarlet Witch and Quicksilver</li>
+<li>Scarlet Witch &amp; Quicksilver</li>
 <li>Scorpion</li>
 <li>Scream</li>
 <li>Sebastian Shaw</li>
@@ -306,7 +306,7 @@
 <li>Shuri Black Panther</li>
 <li>Silver Samurai</li>
 <li>Silver Surfer</li>
-<li>Silver Surfer</li>
+<li>Silver Surfer (Herald)</li>
 <li>Siryn</li>
 <li>Skrulls</li>
 <li>Snowbird</li>
