test with image for Adam Warlock

--- a/characters/adam-warlock/index.html
+++ b/characters/adam-warlock/index.html
@@ -24,16 +24,11 @@
     </ul>
   </div>
 </nav>
-  <h1>Marvel United</h1>
-  <ul class="list-group list-group-flush">
-    
-      <li class="list-group-item">
-        January 17, 2024 
-        <h2 class="p-2">Adam Warlock</h2>
-        <p class="p-2">Adam Warlock is certainly one of the most powerful Heroes in the universe. This artificially created uber-being can put any Villain to the test. His deck is very well balanced, with abilities that can really disrupt a Villain’s master plan. Using quantum magic, Adam can peek at the top 3 Masterplan cards in the deck and rearrange them however he wants. Using his might, he’s able to completely neutralize the next Masterplan card, forcing the Villain to play it facedown with no effect.... <a href="/characters/adam-warlock/">Read more</a></p>
-      </li>
-      
-  </ul>
+  January 17, 2024
+  <h1>Adam Warlock</h1>
+  <p>Adam Warlock is certainly one of the most powerful Heroes in the universe. This artificially created uber-being can put any Villain to the test. His deck is very well balanced, with abilities that can really disrupt a Villain’s master plan. Using quantum magic, Adam can peek at the top 3 Masterplan cards in the deck and rearrange them however he wants. Using his might, he’s able to completely neutralize the next Masterplan card, forcing the Villain to play it facedown with no effect. Finally, he can achieve immortality, never discarding his last card (and being KO’d) while his special card is in the Storyline. This means not even Thanos can eliminate him from the final battle in the Infinity Gauntlet campaign!</p>
+<p><a href="https://www.kickstarter.com/projects/cmon/marvel-united/posts/2775202">https://www.kickstarter.com/projects/cmon/marvel-united/posts/2775202</a></p>
+<p><img src="/img/adam%20warlock/27bd4046b1800c01dc7e51e2b0cd5ee0_original.jpg" alt="Test"></p>
 
 </body>
 </html>
