fixed links on characters page

--- a/marvel-united/index.html
+++ b/marvel-united/index.html
@@ -44,7 +44,7 @@
 <li><a href="/characters/annihilus/">Annihilus</a> | Season 3</li>
 <li><a href="/characters/ant-man/">Ant-Man</a> | Season 1</li>
 <li><a href="/characters/anti-venom/">Anti-Venom</a> | Season 3</li>
-<li><a href="/characters/apocalypse-(aoa)/">Apocalypse (AoA)</a> | Season 3</li>
+<li><a href="/characters/apocalypse-aoa/">Apocalypse (AoA)</a> | Season 3</li>
 <li><a href="/characters/apocalypse/">Apocalypse</a> | Season 2</li>
 <li><a href="/characters/arcade/">Arcade</a> | Season 2</li>
 <li><a href="/characters/archangel/">Archangel</a> | Season 2</li>
@@ -53,7 +53,7 @@
 <li><a href="/characters/avalanche/">Avalanche</a> | Season 2</li>
 <li><a href="/characters/banshee/">Banshee</a> | Season 2</li>
 <li><a href="/characters/baron-zemo/">Baron Zemo</a> | Season 1</li>
-<li><a href="/characters/beast-(first-class)/">Beast (First Class)</a> | Season 2</li>
+<li><a href="/characters/beast-first-class/">Beast (First Class)</a> | Season 2</li>
 <li><a href="/characters/beast/">Beast</a> | Season 2</li>
 <li><a href="/characters/beta-ray-bill/">Beta Ray Bill</a> | Season 1</li>
 <li><a href="/characters/bishop/">Bishop</a> | Season 2</li>
@@ -75,10 +75,10 @@
 <li><a href="/characters/cable/">Cable</a> | Season 2</li>
 <li><a href="/characters/callisto/">Callisto</a> | Season 2</li>
 <li><a href="/characters/cannonball/">Cannonball</a> | Season 2</li>
-<li><a href="/characters/captain-america-(classic)/">Captain America (Classic)</a> | Season 3</li>
-<li><a href="/characters/captain-america-(sam-wilson)/">Captain America (Sam Wilson)</a> | Season 3</li>
+<li><a href="/characters/captain-america-classic/">Captain America (Classic)</a> | Season 3</li>
+<li><a href="/characters/captain-america-sam-wilson/">Captain America (Sam Wilson)</a> | Season 3</li>
 <li><a href="/characters/captain-america/">Captain America</a> | Season 1</li>
-<li><a href="/characters/captain-britain-(betsy-braddock)/">Captain Britain (Betsy Braddock)</a> | Season 3</li>
+<li><a href="/characters/captain-britain-betsy-braddock/">Captain Britain (Betsy Braddock)</a> | Season 3</li>
 <li><a href="/characters/captain-britain/">Captain Britain</a> | Season 2</li>
 <li><a href="/characters/captain-carter/">Captain Carter</a> | Season 3</li>
 <li><a href="/characters/captain-marvel/">Captain Marvel</a> | Season 1</li>
@@ -87,8 +87,8 @@
 <li><a href="/characters/chamber/">Chamber</a> | Season 3</li>
 <li><a href="/characters/chameleon/">Chameleon</a> | Season 3</li>
 <li><a href="/characters/cloak/">Cloak</a> | Season 2</li>
-<li><a href="/characters/colossus-(p5)/">Colossus (P5)</a> | Season 2</li>
 <li><a href="/characters/colossus/">Colossus</a> | Season 2</li>
+<li><a href="/characters/colossus-p5/">Colossus (P5)</a> | Season 2</li>
 <li><a href="/characters/corsair/">Corsair</a> | Season 3</li>
 <li><a href="/characters/corvus-glaive/">Corvus Glaive</a> | Season 1</li>
 <li><a href="/characters/cosmic-ghost-rider/">Cosmic Ghost Rider</a> | Season 3</li>
@@ -97,9 +97,9 @@
 <li><a href="/characters/crossbones/">Crossbones</a> | Season 3</li>
 <li><a href="/characters/crystal/">Crystal</a> | Season 3</li>
 <li><a href="/characters/cyborg-spider-man/">Cyborg Spider-Man</a> | Season 3</li>
-<li><a href="/characters/cyclops-(first-class)/">Cyclops (First Class)</a> | Season 2</li>
-<li><a href="/characters/cyclops-(p5)/">Cyclops (P5)</a> | Season 2</li>
 <li><a href="/characters/cyclops/">Cyclops</a> | Season 2</li>
+<li><a href="/characters/cyclops-first-class/">Cyclops (First Class)</a> | Season 2</li>
+<li><a href="/characters/cyclops-p5/">Cyclops (P5)</a> | Season 2</li>
 <li><a href="/characters/cypher/">Cypher</a> | Season 3</li>
 <li><a href="/characters/dagger/">Dagger</a> | Season 2</li>
 <li><a href="/characters/daken/">Daken</a> | Season 3</li>
@@ -127,8 +127,8 @@
 <li><a href="/characters/electro/">Electro</a> | Season 1</li>
 <li><a href="/characters/elektra/">Elektra</a> | Season 1</li>
 <li><a href="/characters/elsa-bloodstone/">Elsa Bloodstone</a> | Season 3</li>
-<li><a href="/characters/emma-frost-(p5)/">Emma Frost (P5)</a> | Season 2</li>
 <li><a href="/characters/emma-frost/">Emma Frost</a> | Season 2</li>
+<li><a href="/characters/emma-frost-p5/">Emma Frost (P5)</a> | Season 2</li>
 <li><a href="/characters/emperor-doom/">Emperor Doom</a> | Season 3</li>
 <li><a href="/characters/enchantress/">Enchantress</a> | Season 3</li>
 <li><a href="/characters/falcon/">Falcon</a> | Season 1</li>
@@ -142,8 +142,8 @@
 <li><a href="/characters/galactus/">Galactus</a> | Season 3</li>
 <li><a href="/characters/gambit/">Gambit</a> | Season 2</li>
 <li><a href="/characters/gamora/">Gamora</a> | Season 1</li>
-<li><a href="/characters/ghost-rider-(johnny-blaze)/">Ghost Rider (Johnny Blaze)</a> | Season 3</li>
 <li><a href="/characters/ghost-rider/">Ghost Rider</a> | Season 1</li>
+<li><a href="/characters/ghost-rider-johnny-blaze/">Ghost Rider (Johnny Blaze)</a> | Season 3</li>
 <li><a href="/characters/ghost-spider/">Ghost Spider</a> | Season 1</li>
 <li><a href="/characters/gladiator-hulk/">Gladiator Hulk</a> | Season 3</li>
 <li><a href="/characters/gladiator/">Gladiator</a> | Season 3</li>
@@ -155,8 +155,8 @@
 <li><a href="/characters/groot/">Groot</a> | Season 1</li>
 <li><a href="/characters/guardian/">Guardian</a> | Season 2</li>
 <li><a href="/characters/gwenpool/">Gwenpool</a> | Season 2</li>
-<li><a href="/characters/havok-(x-factor)/">Havok (X-Factor)</a> | Season 3</li>
 <li><a href="/characters/havok/">Havok</a> | Season 2</li>
+<li><a href="/characters/havok-x-factor/">Havok (X-Factor)</a> | Season 3</li>
 <li><a href="/characters/hawkeye/">Hawkeye</a> | Season 1</li>
 <li><a href="/characters/hela/">Hela</a> | Season 1</li>
 <li><a href="/characters/hepzibah/">Hepzibah</a> | Season 3</li>
@@ -170,14 +170,14 @@
 <li><a href="/characters/hulkling/">Hulkling</a> | Season 3</li>
 <li><a href="/characters/human-torch/">Human Torch</a> | Season 2</li>
 <li><a href="/characters/husk/">Husk</a> | Season 3</li>
-<li><a href="/characters/iceman-(first-class)/">Iceman (First Class)</a> | Season 2</li>
 <li><a href="/characters/iceman/">Iceman</a> | Season 2</li>
+<li><a href="/characters/iceman-first-class/">Iceman (First Class)</a> | Season 2</li>
 <li><a href="/characters/immortus/">Immortus</a> | Season 3</li>
 <li><a href="/characters/invisible-woman/">Invisible Woman</a> | Season 2</li>
 <li><a href="/characters/iron-fist/">Iron Fist</a> | Season 1</li>
 <li><a href="/characters/iron-lad/">Iron Lad</a> | Season 3</li>
-<li><a href="/characters/iron-man-(civil-war)/">Iron Man (Civil War)</a> | Season 3</li>
 <li><a href="/characters/iron-man/">Iron Man</a> | Season 1</li>
+<li><a href="/characters/iron-man-civil-war/">Iron Man (Civil War)</a> | Season 3</li>
 <li><a href="/characters/iron-patriot/">Iron Patriot</a> | Season 3</li>
 <li><a href="/characters/iron-spider/">Iron Spider</a> | Season 3</li>
 <li><a href="/characters/ironheart/">Ironheart</a> | Season 3</li>
@@ -214,8 +214,8 @@
 <li><a href="/characters/maestro/">Maestro</a> | Season 3</li>
 <li><a href="/characters/magik-(p5)/">Magik (P5)</a> | Season 2</li>
 <li><a href="/characters/magik/">Magik</a> | Season 2</li>
-<li><a href="/characters/magneto-(aoa)/">Magneto (AoA)</a> | Season 3</li>
 <li><a href="/characters/magneto/">Magneto</a> | Season 2</li>
+<li><a href="/characters/magneto-aoa/">Magneto (AoA)</a> | Season 3</li>
 <li><a href="/characters/man-thing/">Man-Thing</a> | Season 3</li>
 <li><a href="/characters/mantis/">Mantis</a> | Season 1</li>
 <li><a href="/characters/maria-hill/">Maria Hill</a> | Season 3</li>
@@ -244,8 +244,8 @@
 <li><a href="/characters/multiple-man/">Multiple Man</a> | Season 2</li>
 <li><a href="/characters/mysterio/">Mysterio</a> | Season 1</li>
 <li><a href="/characters/mystique/">Mystique</a> | Season 2</li>
-<li><a href="/characters/namor-(p5)/">Namor (P5)</a> | Season 2</li>
 <li><a href="/characters/namor/">Namor</a> | Season 2</li>
+<li><a href="/characters/namor-p5/">Namor (P5)</a> | Season 2</li>
 <li><a href="/characters/nebula/">Nebula</a> | Season 1</li>
 <li><a href="/characters/nemesis/">Nemesis</a> | Season 3</li>
 <li><a href="/characters/nick-fury-sr/">Nick Fury Sr</a> | Season 3</li>
@@ -253,8 +253,8 @@
 <li><a href="/characters/nightcrawler/">Nightcrawler</a> | Season 2</li>
 <li><a href="/characters/nimrod/">Nimrod</a> | Season 2</li>
 <li><a href="/characters/northstar/">Northstar</a> | Season 2</li>
-<li><a href="/characters/nova-(frankie-raye)/">Nova (Frankie Raye)</a> | Season 3</li>
 <li><a href="/characters/nova-prime/">Nova Prime</a> | Season 3</li>
+<li><a href="/characters/nova-frankie-raye/">Nova (Frankie Raye)</a> | Season 3</li>
 <li><a href="/characters/nova/">Nova</a> | Season 1</li>
 <li><a href="/characters/okoye/">Okoye</a> | Season 1</li>
 <li><a href="/characters/old-man-logan/">Old Man Logan</a> | Season 2</li>
@@ -288,14 +288,14 @@
 <li><a href="/characters/rogue/">Rogue</a> | Season 2</li>
 <li><a href="/characters/ronan/">Ronan</a> | Season 1</li>
 <li><a href="/characters/ronin/">Ronin</a> | Season 3</li>
-<li><a href="/characters/sabretooth-&amp;-wildchild/">Sabretooth &amp; Wildchild</a> | Season 3</li>
 <li><a href="/characters/sabretooth/">Sabretooth</a> | Season 2</li>
+<li><a href="/characters/sabretooth-wildchild/">Sabretooth &amp; Wildchild</a> | Season 3</li>
 <li><a href="/characters/sandman/">Sandman</a> | Season 1</li>
 <li><a href="/characters/sasquatch/">Sasquatch</a> | Season 2</li>
 <li><a href="/characters/sauron/">Sauron</a> | Season 2</li>
 <li><a href="/characters/scarlet-spider/">Scarlet Spider</a> | Season 3</li>
-<li><a href="/characters/scarlet-witch-&amp;-quicksilver/">Scarlet Witch &amp; Quicksilver</a> | Season 2</li>
 <li><a href="/characters/scarlet-witch/">Scarlet Witch</a> | Season 1</li>
+<li><a href="/characters/scarlet-witch-quicksilver/">Scarlet Witch &amp; Quicksilver</a> | Season 2</li>
 <li><a href="/characters/scorpion/">Scorpion</a> | Season 3</li>
 <li><a href="/characters/scream/">Scream</a> | Season 3</li>
 <li><a href="/characters/sebastian-shaw/">Sebastian Shaw</a> | Season 2</li>
@@ -311,8 +311,8 @@
 <li><a href="/characters/shuri/">Shuri</a> | Season 1</li>
 <li><a href="/characters/silk/">Silk</a> | Season 3</li>
 <li><a href="/characters/silver-samurai/">Silver Samurai</a> | Season 2</li>
-<li><a href="/characters/silver-surfer-(herald)/">Silver Surfer (Herald)</a> | Season 3</li>
 <li><a href="/characters/silver-surfer/">Silver Surfer</a> | Season 2</li>
+<li><a href="/characters/silver-surfer-herald/">Silver Surfer (Herald)</a> | Season 3</li>
 <li><a href="/characters/siryn/">Siryn</a> | Season 3</li>
 <li><a href="/characters/skrulls/">Skrulls</a> | Season 3</li>
 <li><a href="/characters/snowbird/">Snowbird</a> | Season 2</li>
@@ -320,8 +320,8 @@
 <li><a href="/characters/spectrum/">Spectrum</a> | Season 3</li>
 <li><a href="/characters/speed/">Speed</a> | Season 3</li>
 <li><a href="/characters/spider-ham/">Spider-Ham</a> | Season 1</li>
-<li><a href="/characters/spider-man-2099-(original-suit)/">Spider-Man 2099 (Original Suit)</a> | Season 3</li>
 <li><a href="/characters/spider-man-2099/">Spider-Man 2099</a> | Season 1</li>
+<li><a href="/characters/spider-man-2099-original-suit/">Spider-Man 2099 (Original Suit)</a> | Season 3</li>
 <li><a href="/characters/spider-man/">Spider-Man</a> | Season 1</li>
 <li><a href="/characters/spider-man-noir/">Spider-Man Noir</a> | Season 3</li>
 <li><a href="/characters/spider-punk/">Spider-Punk</a> | Season 3</li>
@@ -331,8 +331,8 @@
 <li><a href="/characters/squirrel-girl/">Squirrel Girl</a> | Season 1</li>
 <li><a href="/characters/star-lord/">Star-Lord</a> | Season 1</li>
 <li><a href="/characters/stature/">Stature</a> | Season 3</li>
-<li><a href="/characters/storm-(mohawk)/">Storm (Mohawk)</a> | Season 2</li>
 <li><a href="/characters/storm/">Storm</a> | Season 2</li>
+<li><a href="/characters/storm-mohawk/">Storm (Mohawk)</a> | Season 2</li>
 <li><a href="/characters/strong-guy/">Strong Guy</a> | Season 2</li>
 <li><a href="/characters/stryfe/">Stryfe</a> | Season 2</li>
 <li><a href="/characters/sunfire/">Sunfire</a> | Season 2</li>
